--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,15 @@
     width: 100%;
     height: auto;
   }
+
+
+  
+.card\ h-100:visited{
+    color: inherit;
+    text-decoration: none;
+}
+
+.card\ h-100:link{
+    color: inherit;
+    text-decoration: none;
+}
