added css that disables visual features that makes it look like link, so it doesn't look like link at all while we can use href on it

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,12 +12,12 @@
 
 
   
-.card\ h-100:visited{
+.cardLink:visited{
     color: inherit;
     text-decoration: none;
 }
 
-.card\ h-100:link{
+.cardLink:link{
     color: inherit;
     text-decoration: none;
 }
