--- a/styles/style.css
+++ b/styles/style.css
@@ -8234,7 +8234,7 @@
     clear: both; }
   
   .event-card {
-    padding: 20px 0;
+    padding: 20px 10px;
     max-width: 100%;
     display: block;
     background: #fff;
