--- a/styles/style.css
+++ b/styles/style.css
@@ -263,6 +263,8 @@
   -ms-transform: translateY(3px) scale(0.97);
   transform: translateY(3px) scale(0.97); }
 
+  
+
 /* Days/months tables */
 .days-table, .dates-table, .months-table {
   border-collapse: separate;
@@ -345,3 +347,52 @@
 
 .event-date.active-date {
   background: #28A745; }
+
+.fa-chevron-left:before {
+    content: "\f053";
+    position: relative;
+    display: flex;
+    width: 0;
+    height: 0;
+    content: '';
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-right: 15px solid black;
+}
+
+.fa-chevron-right:before {
+  content: "\f054";
+  position: relative;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid black;
+}
+
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  }
+
+  .fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+}
+
