--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+body {
+  display: auto;
+}
+
 .card-img-top {
     width: 100%;
     height: 10vh;
@@ -395,4 +399,6 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale
 }
+
+
 
